# pychessbinds

./: .gitignore  CMakeLists.txt  README.md
pychessbinds/: bindings.cpp  bindings.hpp  log.cpp  log.hpp  move_analyser.cpp  move_analyser.hpp  piece.cpp  piece.hpp  position.cpp  position.hpp  test.cpp  test.hpp
